<resources>
    <string name="app_name">HelloAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="front_title">My First Nanodegree App</string>
    <string name="button_spotify">SPOTIFY STREAMMER</string>
    <string name="button_scores">SCORES APP</string>
    <string name="button_library">LIBRARY APP</string>
    <string name="button_build">BUILD IT BIGGER</string>
    <string name="button_beacon">XYZ READER</string>
    <string name="button_own">CAPSTONE: MY OWN APP</string>
    <string name="toast_prefix">This button will launch </string>
    <string name="toast_suffix">. Wonderful! </string>
</resources>
